# quvi-pre0.4-split

./: .gitignore  ChangeLog  INSTALL  KNOWN_ISSUES  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  doxygen.conf.in  quvi.1  quvi.pod
doc/: CodingStyle  HowtoContributeCode  HowtoHelp  HowtoSubmitPatches  HowtoWriteWebsiteScript  Makefile.am  Makefile.in  WebsiteScriptGuidelines
doc/man1/: Makefile.am  quvi.1.pod
doc/nd/: CodingStyle.txt  Development.txt  Formats.txt  Helping.txt  SubmittingPatches.txt  WebscriptGuidelines.txt
doc/nd/HOWTOs/: HowtoHelp.txt  HowtoWebscript.txt
doc/nd/Help/: Help.txt
doc/nd/Overviews/: Overview_Network.txt  Overview_Webscripts.txt
doc/nd/Webscripts/: Tutorial.txt
docs/: CONTRIB  Makefile.am  Makefile.in
docs/howto/: HowtoAddSupport
examples/: Makefile.am  Makefile.in  callback_libsoup.c  common.c  common.h  simple.c
examples/git-hooks/: pre-commit
include/: Makefile.in
include/quvi/: Makefile.in  llst.h  net.h  quvi.h  quvi.h.in
lib/: Makefile.am  Makefile.in  curl.c  curl.h  curl_wrap.c  curl_wrap.h  depr.c  host.h  internal.h  llst.c  llst.h  lua_wrap.c  lua_wrap.h  net.c  net.h  net_wrap.c  platform.h  quvi.c  strepl.c  strtok_r.c  strupr.c  util.c  util.h
lib/host/: break.c  cctv.c  clipfish.c  dailymotion.c  ehrensenf.c  evisor.c  funnyhub.c  golem.c  google.c  liveleak.c  myubo.c  sevenload.c  spiegel.c  spyfilms.c  tube8.c  vimeo.c  xvideos.c  youjizz.c  youtube.c
m4/: version.m4
man1/: Makefile.am  Makefile.in  quvi.1  quvi.1.pod
scripts/: Makefile.am  Makefile.in  indent_c.sh  perltidy.sh  perltidyrc
share/: Makefile.am  Makefile.in
share/docs/howtos/: ContributeCode  HowtoContributeCode
share/lua/: README
share/lua/util/: charset.lua  content_type.lua  trim.lua
share/lua/website/: README  academicearth.lua  arte.lua  audioboo.lua  bikeradar.lua  blip.lua  bloomberg.lua  break.lua  buzzhumor.lua  cbsnews.lua  cctv.lua  charlierose.lua  clipfish.lua  collegehumor.lua  dailymotion.lua  evisor.lua  foundrymusic.lua  foxnews.lua  francetelevisions.lua  funnyhub.lua  funnyordie.lua  gaskrank.lua  globo.lua  golem.lua  google.lua  guardian.lua  imdb.lua  keezmovies.lua  liveleak.lua  megavideo.lua  metacafe.lua  mgnetwork.lua  myubo.lua  pluzz.lua  pornhub.lua  publicsenat.lua  sapo.lua  sevenload.lua  soundcloud.lua  spankwire.lua  (+19 more)
share/lua/website/quvi/: bit.lua  const.lua  html.lua  url.lua  util.lua
src/: Makefile.am  Makefile.in  README  cmdline.c  cmdline.ggo  cmdline.h  license.c  makecmdline  quvi.c
src/libquvi/: Makefile.am  Makefile.in  curl_wrap.c  depr.c  depr_api.c  internal.h  llst_api.c  lua_wrap.c  net_api.c  net_wrap.c  quvi.c  quvi_api.c  util.c  util.h
src/libquvi/Overviews/: Makefile.am  Makefile.in  Overview_Webscripts.txt
src/libquvi/quvi/: Makefile.in  llst.h  net.h  quvi.h
src/quvi/: Makefile.am  Makefile.in  cmdline.c  cmdline.ggo  cmdline.h  quvi.c
swig/: quvi.i
tests/: Makefile.am  Makefile.in  README  nosupport-eval.pl  quviTest.pm.in  support-academicearth.pl  support-bloomberg.pl  support-break.pl  support-buzzhumor.pl  support-cbsnews.pl  support-cctv.pl  support-charlierose.pl  support-clipfish.pl  support-collegehumor.pl  support-dailymotion.pl  support-ehrensenf.pl  support-evisor.pl  support-funnyhub.pl  support-funnyordie.pl  support-gaskrank.pl  support-globo.pl  support-golem.pl  support-google.pl  support-keezmovies.pl  support-liveleak.pl  support-myubo.pl  support-publicsenat.pl  support-sapo.pl  support-sevenload.pl  support-shortened.pl  support-soundcloud.pl  support-spiegel.pl  support-spyfilms.pl  support-tagtele.pl  support-ted.pl  support-theonion.pl  support-tmunderground.pl  support-tube8.pl  support-tvlux.pl  support-viddler.pl  (+5 more)
tests/data/format/default/: academicearth.json  blip.json  bloomberg.json  break.json  buzzhumor.json  cbsnews.json  charlierose.json  foxnews.json  funnyhub.json  funnyordie.json  gaskrank.json  globo.json  golem.json  google.json  guardian.json  liveleak.json  megavideo.json  metacafe.json  publicsenat.json  sapo.json  sevenload.json  soundcloud.json  spiegel.json  tagtele.json  ted.json  theonion.json  tmunderground.json  tvlux.json  vimeo.json  youtube.json  youtube_starttime.json
tests/data/format/default/nlfy/: clipfish.json  sevenload.json
tests/data/format/default/nsfw/: keezmovies.json  pornhub.json  spankwire.json  tube8.json  xhamster.json  xvideos.json  youjizz.json
tests/data/format/default/todo/: collegehumor.json
tests/data/format/other/: blip_best.json  blip_hd.json  blip_sd.json  cbsnews_best.json  cbsnews_m4v_216p.json  cbsnews_m4v_360p.json  cbsnews_m4v_480p.json  cbsnews_mp4_180p.json  cbsnews_mp4_240p.json  cbsnews_mp4_480p.json  foxnews_best.json  foxnews_high.json  foxnews_low.json  foxnews_med.json  foxnews_med_low.json  golem_best.json  golem_high.json  golem_ipod.json  spiegel_1400k.json  spiegel_576k.json  spiegel_928k.json  spiegel_best.json  spiegel_vp6_315p.json  spiegel_vp6_544p.json  ted_best.json  ted_hd.json  vimeo_best.json  vimeo_hd.json  youtube_best.json  youtube_flv_240p.json  youtube_flv_360p.json  youtube_flv_480p.json  youtube_mp4_1080p.json  youtube_mp4_3072p.json  youtube_mp4_360p.json  youtube_mp4_720p.json
tests/data/format/other/ignore/length_bytes/: dailymotion_best.json  dailymotion_h264_480p.json  dailymotion_hd.json  dailymotion_hq.json
tests/data/resolve/: inscript_redirect.json  shortened.json
tests/lib/Test/: Quvi.pm
tests/t/: format_default.t  format_default_nonhttp.t  format_default_nsfw.t  format_other.t  mem.t  nosupport.t  redirect.t  shortened.t
tests/t/d/: url.t
w32/: ChangeLog.w32.txt  make-w32.sh
