
SUBDIRS = man1

EXTRA_DIST = \
nd/Development.txt \
nd/SubmittingPatches.txt \
nd/WebscriptGuidelines.txt \
nd/About.txt \
nd/Formats.txt \
nd/CodingStyle.txt \
nd/Helping.txt \
nd/HOWTOs/HowtoWebscript.txt \
nd/Overviews/Overview_LinkedList.txt \
nd/Overviews/Overview_Network.txt \
nd/Overviews/Overview_Webscripts.txt \
nd/Overviews/Overview.txt
