

DIST_lua = \
lua/README \
lua/website/README \
lua/website/break.lua \
lua/website/buzzhumor.lua \
lua/website/cctv.lua \
lua/website/clipfish.lua \
lua/website/dailymotion.lua \
lua/website/evisor.lua \
lua/website/funnyhub.lua \
lua/website/golem.lua \
lua/website/google.lua \
lua/website/youtube.lua

EXTRA_DIST = $(DIST_lua)

nobase_dist_pkgdata_DATA = $(DIST_lua)
